[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DearPyGui-DragAndDrop"
version = "1.0.0"
authors = [
    { name = "Ivan Nazaruk" },
]
description = "Working Drag-and-Drop for DearPyGui, Windows only"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "pywin32",
    "dearpygui>=1.4"
]

[tool.setuptools]
packages = ["DearPyGui_DragAndDrop"]

[project.urls]
"Homepage" = "https://github.com/IvanNazaruk/DearPyGui-DragAndDrop"
"Bug Tracker" = "https://github.com/IvanNazaruk/DearPyGui-DragAndDrop/issues"